refatorando Parenteses : usando a melhor estrutura de dados para este problema